--- a/index.html
+++ b/index.html
@@ -21,46 +21,43 @@
 
 <body>
 
-    <main class="coming-soon-wrapper">
-        <div class="container coming-soon-content">
+    <main class="cs-page-wrapper">
 
-            <!-- Top Logo -->
-            <div class="nav-logo-link static-logo">
-                <span class="nav-logo-letter">L</span>
+        <!-- White Card Box -->
+        <div class="cs-card animate-fade-in-up">
+
+            <!-- Headlines -->
+            <div class="cs-text-content">
+                <h1 class="cs-title">Coming Soon</h1>
+                <p class="cs-subtitle">Portfolio loading, expected 2026</p>
             </div>
 
-            <!-- Main Heading with Blob -->
-            <div class="cs-heading-wrapper animate-fade-in-up delay-2">
-                <div class="cs-blob"></div>
-                <h1>Coming Soon</h1>
+            <!-- Signature -->
+            <div class="cs-signature-wrapper">
+                <span class="cs-signature">Liuvys Perez</span>
             </div>
 
-            <!-- Separator Line -->
-            <div class="cs-separator animate-fade-in-up delay-3"></div>
-
-            <!-- Supporting Message -->
-            <p class="cs-message animate-fade-in-up delay-3">
-                I'm currently crafting a new digital experience.<br>
-                Expected launch: <strong>2026</strong>
-            </p>
-
-            <!-- Primary CTA -->
-            <div class="animate-fade-in-up delay-4">
-                <a href="mailto:liuvysp@gmail.com" class="btn">Get In Touch</a>
+            <!-- Social Icons -->
+            <div class="cs-socials">
+                <a href="https://www.linkedin.com/in/liuvys/" target="_blank" aria-label="LinkedIn"><i
+                        class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/Liuvysss" target="_blank" aria-label="GitHub"><i
+                        class="fab fa-github"></i></a>
+                <a href="https://instagram.com/liuvysss" target="_blank" aria-label="Instagram"><i
+                        class="fab fa-instagram"></i></a>
+                <a href="mailto:liuvysp@gmail.com.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
             </div>
 
         </div>
+
+        <!-- Footer (Outside the box) -->
+        <footer class="cs-footer">
+            <p>Copyright &copy; 2025 Liuvys Perez. All Rights Reserved.</p>
+        </footer>
+
     </main>
 
-    <!-- Corner Detail (Faint/Decorative) -->
-    <div class="cs-corner-mark">
-        <svg viewBox="0 0 100 100" width="100%" height="100%">
-            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" fill="none" stroke="currentColor" stroke-width="2" />
-            <text x="50" y="55" text-anchor="middle" font-family="Homemade Apple" font-size="20"
-                fill="currentColor">L</text>
-        </svg>
-    </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
